archive/system/sealed-secrets-web/httproute_DISABLED.yaml
# Disabled in favour of more secure authenticated access via Omni service exposer.

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets
  namespace: kube-system
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "sealedsecrets.laskonet.com"
  rules:
  - backendRefs:
    - name: sealed-secrets-web
      namespace: kube-system
      kind: Service
      port: 80
